初始化项目

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "demo/hello.css": "/assets/static/demo/hello-80ad67d5.css",
   "demo/hlj.js": "/assets/static/demo/hlj-e1950391.js",
   "demo/hlj.css": "/assets/static/demo/hlj-80ad67d5.css",
-  "guess.js": "/assets/static/guess-5e65d38c.js",
-  "guess.css": "/assets/static/guess-fe74c960.css",
+  "guess.js": "/assets/static/guess-baf58a95.js",
+  "guess.css": "/assets/static/guess-1f0c3380.css",
   "cms.js": "/assets/static/cms-5ddee8fd.js",
   "cms.css": "/assets/static/cms-80ad67d5.css",
   "element-icons.ttf": "/732389ded34cb9c52dd88271f1345af9.ttf",
@@ -16,10 +16,10 @@
   "movie.css": "/assets/static/movie-80ad67d5.css",
   "login.js": "/assets/static/login-e26af39a.js",
   "login.css": "/assets/static/login-80ad67d5.css",
-  "error/404.js": "/assets/static/error/404-f59fe969.js",
-  "error/404.css": "/assets/static/error/404-fe74c960.css",
-  "detail.js": "/assets/static/detail-7e231008.js",
-  "detail.css": "/assets/static/detail-80ad67d5.css",
+  "error/404.js": "/assets/static/error/404-719399c2.js",
+  "error/404.css": "/assets/static/error/404-1f0c3380.css",
+  "detail.js": "/assets/static/detail-3c777448.js",
+  "detail.css": "/assets/static/detail-5c2788f1.css",
   "ai.js": "/assets/static/ai-049cd506.js",
   "ai.css": "/assets/static/ai-80ad67d5.css",
   "phptest.js": "/assets/static/phptest-4417974a.js",
@@ -64,28 +64,40 @@
   "hello.css": "/assets/static/hello-fdf92da0.css",
   "home.js": "/assets/static/home-db230c01.js",
   "home.css": "/assets/static/home-736c5c37.css",
-  "pc/home.js": "/assets/static/pc/home-9453b8fc.js",
-  "pc/home.css": "/assets/static/pc/home-fe74c960.css",
-  "movie/register.js": "/assets/static/movie/register-c7c03e11.js",
-  "movie/register.css": "/assets/static/movie/register-fe74c960.css",
-  "movie/login.js": "/assets/static/movie/login-dc368706.js",
-  "movie/login.css": "/assets/static/movie/login-fe74c960.css",
-  "index.js": "/assets/static/index-3189a011.js",
-  "index.css": "/assets/static/index-fe74c960.css",
-  "injurynbapc.js": "/assets/static/injurynbapc-f0a32a92.js",
-  "injurynbapc.css": "/assets/static/injurynbapc-fe74c960.css",
-  "votepc.js": "/assets/static/votepc-8e56ce8a.js",
-  "votepc.css": "/assets/static/votepc-fe74c960.css",
-  "vote.js": "/assets/static/vote-921c7d92.js",
-  "vote.css": "/assets/static/vote-fe74c960.css",
-  "injurywnbapc.js": "/assets/static/injurywnbapc-ddd420a3.js",
-  "injurywnbapc.css": "/assets/static/injurywnbapc-fe74c960.css",
-  "injurywnba.js": "/assets/static/injurywnba-f4d314ab.js",
-  "injurywnba.css": "/assets/static/injurywnba-fe74c960.css",
-  "injurynba.js": "/assets/static/injurynba-82d89f2a.js",
-  "injurynba.css": "/assets/static/injurynba-fe74c960.css",
-  "injurycbapc.js": "/assets/static/injurycbapc-f7d7f879.js",
-  "injurycbapc.css": "/assets/static/injurycbapc-fe74c960.css",
-  "injurycba.js": "/assets/static/injurycba-33a59ab4.js",
-  "injurycba.css": "/assets/static/injurycba-fe74c960.css"
+  "pc/home.js": "/assets/static/pc/home-0fb7904b.js",
+  "pc/home.css": "/assets/static/pc/home-1f0c3380.css",
+  "movie/register.js": "/assets/static/movie/register-088102f7.js",
+  "movie/register.css": "/assets/static/movie/register-5c2788f1.css",
+  "movie/login.js": "/assets/static/movie/login-b02c099a.js",
+  "movie/login.css": "/assets/static/movie/login-5c2788f1.css",
+  "index.js": "/assets/static/index-1338cfa4.js",
+  "index.css": "/assets/static/index-1f0c3380.css",
+  "injurynbapc.js": "/assets/static/injurynbapc-0a18f226.js",
+  "injurynbapc.css": "/assets/static/injurynbapc-5c2788f1.css",
+  "votepc.js": "/assets/static/votepc-387ba8a1.js",
+  "votepc.css": "/assets/static/votepc-5c2788f1.css",
+  "vote.js": "/assets/static/vote-59d6e789.js",
+  "vote.css": "/assets/static/vote-5c2788f1.css",
+  "injurywnbapc.js": "/assets/static/injurywnbapc-09a461a0.js",
+  "injurywnbapc.css": "/assets/static/injurywnbapc-5c2788f1.css",
+  "injurywnba.js": "/assets/static/injurywnba-fa538c12.js",
+  "injurywnba.css": "/assets/static/injurywnba-5c2788f1.css",
+  "injurynba.js": "/assets/static/injurynba-acbc0a1a.js",
+  "injurynba.css": "/assets/static/injurynba-5c2788f1.css",
+  "injurycbapc.js": "/assets/static/injurycbapc-02140ea3.js",
+  "injurycbapc.css": "/assets/static/injurycbapc-5c2788f1.css",
+  "injurycba.js": "/assets/static/injurycba-c4558d34.js",
+  "injurycba.css": "/assets/static/injurycba-5c2788f1.css",
+  "rankpc.js": "/assets/static/rankpc-8332f2b0.js",
+  "rankpc.css": "/assets/static/rankpc-5c2788f1.css",
+  "rank.js": "/assets/static/rank-daff232a.js",
+  "rank.css": "/assets/static/rank-5c2788f1.css",
+  "news.js": "/assets/static/news-c17f80ed.js",
+  "news.css": "/assets/static/news-5c2788f1.css",
+  "infopc.js": "/assets/static/infopc-63d43e57.js",
+  "infopc.css": "/assets/static/infopc-5c2788f1.css",
+  "info.js": "/assets/static/info-e4896b01.js",
+  "info.css": "/assets/static/info-5c2788f1.css",
+  "detailpc.js": "/assets/static/detailpc-d8eed0f8.js",
+  "detailpc.css": "/assets/static/detailpc-5c2788f1.css"
 }
